--- a/bro java scri/style.css
+++ b/bro java scri/style.css
@@ -1,5 +1,6 @@
 *{
-    background-color:dimgray;
+    margin: 0;
+    padding: 0;
 }
 /* #countLabel{
     display: block;
@@ -110,4 +111,3 @@ input{
     text-align:center;
     font-weight: bold;
 } */
-
